--- a/helloGIT/index.html
+++ b/helloGIT/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo GIT</title>
+    <title>Demo GIT: Modificado</title>
 </head>
 <body>
     <h1>Título: Hola</h1>
