--- a/helloGIT/index.html
+++ b/helloGIT/index.html
@@ -7,6 +7,6 @@
     <title>Demo GIT: Modificado</title>
 </head>
 <body>
-    <h1>Título: Hola</h1>
+    <h1>Título: Hola Ahoraa modificado</h1>
 </body>
 </html>
