Se modificó index

--- a/helloGIT/index.html
+++ b/helloGIT/index.html
@@ -10,6 +10,7 @@
     <h1>Título: Hola Ahoraa modificado</h1>
 
     <form action="#">
+        <input type="text" name="first-name" id="first-name">
         <input type="button" value="Enviar">
 
     </form>
