--- a/helloGIT/index.html
+++ b/helloGIT/index.html
@@ -12,8 +12,9 @@
     <form action="#">
         <input type="text" name="first-name" id="first-name">
         <input type="text" name="last-name" id="last-name">
+        <input type="number" name="date" id="last-date">
         <input type="button" value="Enviar">
-
+        i
     </form>
 </body>
 </html>
