--- a/helloGIT/index.html
+++ b/helloGIT/index.html
@@ -10,7 +10,7 @@
     <h1>Título: Hola Ahoraa modificado</h1>
 
     <form action="#">
-        <input type="text" name="first-name" id="first-name">
+        <input type="number" name="first-name" id="first-name">
         <input type="text" name="last-name" id="last-name">
         <input type="number" name="date" id="last-date">
         <input type="button" value="Enviar">
