--- a/helloGIT/index.html
+++ b/helloGIT/index.html
@@ -14,7 +14,7 @@
         <input type="text" name="last-name" id="last-name">
         <input type="number" name="date" id="last-date">
         <input type="button" value="Enviar">
-        i
+        <img src="#" alt="Test">
     </form>
 </body>
 </html>
