Se agrega submit

--- a/helloGIT/index.html
+++ b/helloGIT/index.html
@@ -15,6 +15,8 @@
         <input type="number" name="date" id="last-date">
         <input type="button" value="Enviar">
         <img src="#" alt="Test">
+
+        <input type="submit">
     </form>
 </body>
 </html>
