Se agrega el lastname 2

--- a/helloGIT/index.html
+++ b/helloGIT/index.html
@@ -12,9 +12,10 @@
     <form action="#">
         <input type="number" name="first-name" id="first-name">
         <input type="text" name="last-name" id="last-name">
+        <input type="text" name="last-name" id="last-name2">
         <input type="number" name="date" id="last-date">
         <input type="button" value="Enviar">
-        i
+        
     </form>
 </body>
 </html>
