--- a/helloGIT/index.html
+++ b/helloGIT/index.html
@@ -16,7 +16,7 @@
         <input type="button" value="Enviar">
         <img src="#" alt="Test">
 
-        <input type="submit">
+        <input type="submit2">
     </form>
 </body>
 </html>
